# Groebner_Basis

./: CMakeLists.txt  README.md  algorithms.h  algorythms.h  main.cpp
monom/: monom.cpp  monom.h  order.cpp  order.h
polynom/: polynom.cpp  polynom.h  set_of_polynoms.cpp  set_of_polynoms.h  term.h
tests/: correctness_tests.cpp  correctness_tests.h  cyclic.h  except.cpp  except.h  tests.cpp  tests.h  time_tests.cpp  time_tests.h  timer_wrapper.h
types/: rational.cpp  rational.h  remainders.cpp  remainders.h
